--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.0",
     "antd": "^5.16.2",
+    "axios": "^1.6.8",
+    "cookies-next": "^4.1.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
